# walter-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.observability.yml  index.py  main.py  models.groq.py  prometheus.yml  pyproject.toml  requirements.txt  walter-ai.md
.github/workflows/: llm-eval.yml
app/adapters/controllers/v1/: chat.py  insights.py  projects.py
app/adapters/data/: json_loader.py  sqlite_audit.py
app/adapters/llm/: litellm_adapter.py
app/api/v1/endpoints/: chat.py  portfolio.py  projects.py
app/config/: config.yml  config.yml.example
app/core/: config.py  data_loader.py  dependencies.py  logger.py  metrics.py  prompts.py  security.py  telemetry.py
app/data/: cv_data.json  data.json
app/domain/models/: schemas.py
app/domain/ports/: audit.py  data.py  data_provider.py  llm.py
app/domain/services/: agent.py
app/models/: schemas.py
app/providers/: llm_provider.py
app/services/: agent_service.py  chat_service.py  quality_service.py
app/templates/: chat_ui.html
app/tools/: cv_tools.py  registry.py
config/: llm.yml.example
docs/deployment/: aws-deployment.md
docs/observability/: prometheus_thresholds.md
docs/observability/post_mortems/: post_mortem_llm_429.md
docs/observability/runbooks/: audit_db_unavailable.md  llm_429_rate_limit.md  tool_timeout.md
docs/superpowers/plans/: task-9-report.md
grafana/provisioning/dashboards/: dashboard.yml  walter-ai.json
prometheus/: alert.rules.yml
scripts/: README.md  eval_dataset.json  evaluator.py
services/: ai_service.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_api.py  test_audit_integration.py  test_json_loader.py  test_litellm_adapter.py  test_llm_provider.py
tests/adapters/controllers/: test_insights.py
tests/adapters/data/: test_sqlite_audit.py
tests/adapters/llm/: test_litellm_metrics.py
tests/core/: test_config.py  test_logger.py  test_metrics.py  test_telemetry.py  test_telemetry_integration.py
tests/domain/services/: test_agent_audit.py  test_agent_metrics.py
