[project]
name = "walter-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "litellm>=1.40.0",
    "PyYAML>=6.0.1",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dotenv==1.0.1",
    "slowapi==0.1.9",
    "uvicorn==0.32.0",
    "prometheus-fastapi-instrumentator>=0.9.1",
    "prometheus-client>=0.20.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.51",
    "greenlet>=3.5.3",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "setuptools==69.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
